fix the footer on small screens

--- a/src/scss/components/_block.scss
+++ b/src/scss/components/_block.scss
@@ -58,6 +58,7 @@
 		& > * {
 			margin-left: 10vw;
 			margin-right: 10vw;
+			max-width: calc(100% - 20vw);
 		}
 	}
 }
